hbase-handler/src/test/queries/negative/create_table_stored_by_stored_as_failure.q
create external table test_table ( a int ) stored by 'org.apache.hadoop.hive.hbase.HBaseStorageHandler' stored as orc;